fix+styles(web): fix text overflow in sidebar and toolbar, make mention header nontransparent.

--- a/actor-apps/app-web/src/styles/modals.scss
+++ b/actor-apps/app-web/src/styles/modals.scss
@@ -5,10 +5,10 @@
 .ReactModal__Overlay {
   position: fixed;
   z-index: 100;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  //top: 0;
+  //right: 0;
+  //bottom: 0;
+  //left: 0;
   //perspective: 600px;
 
   display: flex;
