--- a/actor-apps/app-web/src/styles/sidebar.scss
+++ b/actor-apps/app-web/src/styles/sidebar.scss
@@ -184,6 +184,7 @@
       .title {
         overflow: hidden;
 
+        white-space: nowrap;
         text-overflow: ellipsis;
       }
       .counter {
